# deeznes

./: .bazelrc  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  WORKSPACE
.github/workflows/: main.yml
app/: BUILD  CMakeLists.txt
app/old/: cpu_win.h  deeznes.cpp  main_win.h  window.h
app/src/: cpu_display.cpp  cpu_display.h  cpu_win.cpp  deeznes.cpp  instr_display.cpp  instr_display.h  main.cpp  main_win.cpp  pat_table_display.cpp  pat_table_display.h  pat_tile.cpp  pat_tile.h
cart/: BUILD  CMakeLists.txt
cart/include/: nes_cart.h
cart/include/cart/: cart_data.h  ines_cart.h  mapper.h  nes_cart.h
cart/src/: ines_cart.cpp  mapper_factory.cpp  mapper_factory.h  nes_cart.cpp  nrom_mapper.cpp  nrom_mapper.h
cart/test/: ines_cart_tests.cpp
compat/: BUILD  CMakeLists.txt
compat/include/: optional.h
compat/include/compat/: optional.h  size.h  span.h
compat/test/: span_tests.cpp
console/: BUILD  CMakeLists.txt
console/include/: console_cpu_binder.h  console_ppu_binder.h  nes_console.h  nes_console_state.h
console/include/console/: console_cpu_binder.h  console_ppu_binder.h  nes_console.h  nes_console_state.h
console/src/: console_cpu_binder.cpp  console_ppu_binder.cpp  nes_console.cpp
console/test/: basics.cpp  nestest.cpp
cpu/: BUILD  CMakeLists.txt
cpu/include/: m6502.h  m6502_addrmode.h  m6502_callbacks.h  m6502_disassembler.h  m6502_flags.h  m6502_opcode.h  m6502_registers.h  m6502_state.h
cpu/include/cpu/: m6502.h  m6502_registers.h  m6502_state.h
cpu/src/: m6502.cpp  m6502_addrmode.h  m6502_disassembler.cpp  m6502_disassembler.h  m6502_opcode.cpp  m6502_opcode.h  m6502_state.cpp
cpu/test/: fuzz_tests.cpp  nonstd_instr.cpp  state_tests.cpp  std_instr.cpp  test_mem.h
doc/6502/: 6502.txt  addressing.html  algorithms.html  aopc.html  architecture.html  instructions.html  registers.html
fonts/: BUILD
io/: BUILD  CMakeLists.txt
io/include/: nes_joystick.h
io/include/io/: nes_joystick.h
libc/: BUILD
libc/include/libc/: fstat.h  mmap.h  open.h  sysconf.h  unique_fd.h
libc/src/: fstat.cpp  mmap.cpp  open.cpp  sysconf.cpp
ppu/: BUILD  CMakeLists.txt
ppu/include/: ppu.h  ppu_callbacks.h  ppu_flags.h  ppu_registers.h  ppu_state.h
ppu/include/ppu/: ppu.h  ppu_callbacks.h  ppu_registers.h
ppu/src/: ppu.cpp
ppu/test/: basics.cpp
roms/: BUILD
sdlpp/: BUILD  CMakeLists.txt
sdlpp/include/: init_ctxt.h  non_copyable.h  renderer.h  sdl_context.h  sdl_renderer.h  sdl_surface.h  sdl_texture.h  sdl_window.h  sdlpp.h  surface.h  texture.h  window.h
sdlpp/include/sdlpp/: color.h  init_ctxt.h  renderer.h  surface.h  texture.h  window.h
sdlpp/src/: init_ctxt.cpp  renderer.cpp  texture.cpp  window.cpp
sdlttfpp/: BUILD  CMakeLists.txt
sdlttfpp/include/: font.h  init_ctxt.h
sdlttfpp/include/sdlttfpp/: font.h  init_ctxt.h  sdlttfpp.h
sdlttfpp/src/: font.cpp
toolchain/: BUILD
