cmake_minimum_required (VERSION 3.0)
project (deeznes)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake/")

set(CPACK_PACKAGE_NAME "deeznes")
set(CPACK_PACKAGE_VENDOR "Steven Engelhardt")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Deeznes NES Emulator")
set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
set(CPACK_PACKAGE_VERSION_MAJOR "1")
set(CPACK_PACKAGE_VERSION_MINOR "0")
set(CPACK_PACKAGE_VERSION_PATCH "0")
set(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
if (WIN32)
  # Default generator on Win32 is MSI; we prefer ZIP
  set(CPACK_GENERATOR "ZIP")
endif()
include(CPack)

find_package(SDL2 CONFIG REQUIRED)
find_package(SDL2-ttf CONFIG REQUIRED)
find_package(Boost 1.73.0 REQUIRED)
find_package(GTest CONFIG REQUIRED)

enable_testing()

add_subdirectory(app)
add_subdirectory(cart)
add_subdirectory(compat)
add_subdirectory(console)
add_subdirectory(cpu)
add_subdirectory(io)
add_subdirectory(ppu)
add_subdirectory(sdlpp)
add_subdirectory(sdlttfpp)
